# sit_gateway

./: .gitignore  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pylint.yml
apps/sit_api/: api.py  auth.py  socket.py
apps/sit_ble/: ble.py
apps/sit_gateway/: ble.py  bootstrap.py  gateway.py  sit_gateway.py  websocket.py
apps/sit_gateway/adapter/: ble.py  exceptions.py
apps/sit_gateway/domain/: commands.py  data.py  events.py
apps/sit_gateway/entrypoint/: websocket.py
apps/sit_gateway/service_layer/: messagebus.py  uow.py  utils.py
apps/sit_gateway/service_layer/handler/: __init__.py  calibration.py  command_handler.py  distance.py  event_handler.py  handler.py  position.py
settings/: logging.conf
