[tool.black]
line-length=79

[tool.isort]
import_heading_firstparty = "Library"
import_heading_future = "Futures"
import_heading_local = "Local"
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third Party"
indent = 4
known_first_party = "myapp"
lines_after_imports = 2
lines_between_types = 1
profile = "black"

#Pylint section
[tool.pylint]

[tool.pylint.master]


[tool.pylint.'BASIC']
const-naming-style='UPPER_CASE'
module-naming-style='camelCase'
class-naming-style='PascalCase'

[tool.pylint.'LOGGING']
logging-format-style = "new"

[tool.pylint.'MESSAGES CONTROL']
disable = ['I1101', 'C0114', 'C0115', 'C0116', 'W0621']




[tool.flake8]
ignore = ["F811"]

[tool.poetry]
name = "sit-gateway"
version = "0.1.0"
description = ""
authors = ["Sven Hoyer <sven.hoyer@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.13"
websockets = "^12.0"
bleak = "^0.21.1"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
mypy = "^1.8.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
